Fix heading layout on small mobile screens

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -72,3 +72,9 @@ p a {
   border-top: none;
 }
 
+
+@include media-breakpoint-down(sm) {
+  .jumbotron  h1.display-4 {
+    font-size: $display4-size * .9;
+  }
+}
